analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/classLiteralWithArgument.kt
fun foo() {
    String::class(<expr>fun() {}</expr>)
}